--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <h1 class="text-2xl font-bold text-gray-800">
                     <span class="text-orange-500">ENP</span> FUEL TRADING
                 </h1>
-                <p class="text-xs text-gray-600">Navotas City</p>
+                <p class="text-xs text-gray-600">Navotas, National Capital Region, Philippines</p>
             </a>
             <button class="md:hidden focus:outline-none" id="mobile-menu-button">
                 <i class="fas fa-bars text-2xl text-gray-800"></i>
@@ -121,7 +121,7 @@
                         </div>
                         <div>
                             <p class="text-gray-600">Ready to discuss your fuel needs?</p>
-                            <a href="tel:+63123456789" class="text-xl font-bold text-gray-800 hover:text-orange-500">+(63) 123 456 789</a>
+                            <a href="tel:+639171661331" class="text-xl font-bold text-gray-800 hover:text-orange-500">+(63) 917 166 1331</a>
                         </div>
                     </div>
                 </div>
@@ -235,7 +235,7 @@
                             <i class="fas fa-user text-orange-500"></i>
                         </div>
                         <div>
-                            <h4 class="font-bold">Juan Dela Cruz</h4>
+                            <h4 class="font-bold">Jaime Solano</h4>
                             <p class="text-sm text-gray-500">Construction Company Owner</p>
                         </div>
                     </div>
@@ -249,7 +249,7 @@
                             <i class="fas fa-user text-orange-500"></i>
                         </div>
                         <div>
-                            <h4 class="font-bold">Maria Santos</h4>
+                            <h4 class="font-bold">Marielle Santos</h4>
                             <p class="text-sm text-gray-500">Transport Fleet Manager</p>
                         </div>
                     </div>
@@ -263,7 +263,7 @@
                             <i class="fas fa-user text-orange-500"></i>
                         </div>
                         <div>
-                            <h4 class="font-bold">Roberto Garcia</h4>
+                            <h4 class="font-bold">John Robert Garcia</h4>
                             <p class="text-sm text-gray-500">Factory Operations Director</p>
                         </div>
                     </div>
@@ -329,8 +329,8 @@
                                 </div>
                                 <div>
                                     <h4 class="font-bold mb-1">Phone</h4>
-                                    <p class="text-gray-300">+(63) 123 456 789</p>
-                                    <p class="text-gray-300">+(63) 987 654 321</p>
+                                    <p class="text-gray-300">+(63) 917 166 1331</p>
+                                    <p class="text-gray-300">+(63) 976 533 0726</p>
                                 </div>
                             </div>
                             <div class="flex items-start">
@@ -339,8 +339,8 @@
                                 </div>
                                 <div>
                                     <h4 class="font-bold mb-1">Email</h4>
-                                    <p class="text-gray-300">info@enpfuel.com</p>
-                                    <p class="text-gray-300">sales@enpfuel.com</p>
+                                    <p class="text-gray-300">enpfuel@gmail.com</p>
+                                    <p class="text-gray-300">dagasdasrosel17@gmail.com</p>
                                 </div>
                             </div>
                             <div class="flex items-start">
@@ -349,14 +349,13 @@
                                 </div>
                                 <div>
                                     <h4 class="font-bold mb-1">Business Hours</h4>
-                                    <p class="text-gray-300">Monday - Friday: 8:00 AM - 5:00 PM</p>
-                                    <p class="text-gray-300">Saturday: 8:00 AM - 12:00 PM</p>
+                                    <p class="text-gray-300">Monday - Saturday: 8:00 AM - 5:00 PM</p>
                                     <p class="text-gray-300">Emergency Service: 24/7</p>
                                 </div>
                             </div>
                         </div>
                         <div class="mt-8">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12365.0000000!2d120.0000000!3d14.0000000!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTTCsDYwJzAwLjAiTiAxMjDCsDAwJzAwLjAiRQ!5e0!3m2!1sen!2sph!4v0000000000!5m2!1sen!2sph" class="w-full h-64 rounded-lg" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3860.3274172803717!2d120.95790577502838!3d14.637346376176092!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397b56fb7a7893b%3A0xdbf68d80837d0085!2sMelandrea%20III%20Building!5e0!3m2!1sen!2sph!4v1753374632450!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
                 </div>
